# jftt-lista4

./: .gitignore  LICENSE  README.md  TODO  divisionPrototype.py  temp.txt
compiler/: CMakeLists.txt
compiler/app/: lexer.l  lexer.ll  parser.y  parser.yy
compiler/inc/: Assignment.hpp  Block.hpp  Command.hpp  Condition.hpp  ConditionalBlock.hpp  DivMod.hpp  GlobalBlock.hpp  IOCommand.hpp  Identifier.hpp  IfBlock.hpp  InterCode.hpp  IntermidiateCode.hpp  IntermidiateParser.hpp  MainBlock.hpp  Multiplication.hpp  Procedure.hpp  Variable.hpp  WhileBlock.hpp  utilities.h
compiler/src/: Assignment.cpp  Block.cpp  DivMod.cpp  GlobalBlock.cpp  IOCommand.cpp  IfBlock.cpp  IntermidiateCode.cpp  IntermidiateParser.cpp  MainBlock.cpp  Multiplication.cpp  Procedure.cpp  WhileBlock.cpp
my_examples/: ex0.txt  ex1.txt  ex2.txt  exDiv1.txt  exDiv2.txt  exDiv3.txt  exIf1.txt  exIf2.txt  exIf3.txt  exIf4.txt  exLoop1.txt  exLoop2.txt  exMod1.txt  exMod2.txt  exMod3.txt  exMult1.txt  exMult2.txt  exMult3.txt  exProc1.txt  exProc3.txt  exProc4.txt  exProc5.txt  exProc6.txt  exRepeat0.txt  exRepeat2.txt  exRepeat3.txt  exRepeat4.txt  exWhile2.txt  exWhile3.txt  exWhile4.txt  exZawoj0.txt
